--- a/application/index/view/blueprint/sequence.html
+++ b/application/index/view/blueprint/sequence.html
@@ -1,6 +1,8 @@
 ﻿{include file="public/header" /}
 <body>
 <div class="x-body">
+  <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
     <legend>工序详情</legend>
 
